--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Piggy Payday</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="loading-screen.css">
-    <script src="popup.js"></script>
+    <script src="p.js"></script>
     <meta charset='UTF-8' />
 </head>
 
