--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Piggy Payday</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="loading-screen.css">
+    <link rel="stylesheet" href="s.css">
+    <link rel="stylesheet" href="ls.css">
     <script src="p.js"></script>
     <meta charset='UTF-8' />
 </head>
