--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <div class="diceContainer">
             <div class="dice-p" id="dice-p">
                 <div class="diceValue" id="diceValue"></div>
-                <img class="diceImg" id="diceImg" src="piggy-payday/img/dice.png" alt="">
+                <img class="diceImg" id="diceImg" src="/img/dice.png" alt="">
             </div>
         </div>
         <input id="rs-range-line" class="rs-range" type="range" value="50" min="2" max="98">
