--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <i id="enter"></i>
 </div>
 
+
+<div id="container69">
 <div id="home">
     <header id="home-header">
         <button class="goCasino">Casino</button>
@@ -241,6 +243,7 @@
         </div>
         <div id="diceText"></div>
     </div>
+</div>
 </div>
 
 </html>
