--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
 
 
-<div id="container69">
+<body>
 <div id="home">
     <header id="home-header">
         <button class="goCasino">Casino</button>
@@ -244,6 +244,6 @@
         <div id="diceText"></div>
     </div>
 </div>
-</div>
+</body>
 
 </html>
