--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </header>
 
     <div id="emoji-container">
+        <div id="emojis-pos"></div>
         <h2 id="piggyTitle">Piggy Payday</h2>
         <p id="piggyCounter">Pigs 0</p>
         <p id="myMultiplier">Multiplier x1</p>
